--- a/src/components/Shared/Navber/Navber.css
+++ b/src/components/Shared/Navber/Navber.css
@@ -2,17 +2,17 @@
     width: 100%;
     position: fixed;
     top: 0;
-    background-color: #EEE;
     z-index: 1000;
-    height: 3rem;
+    height: 4rem;
 }
 
 .nav-container {
     max-width: 95%;
-    padding: 0 2rem;
+    padding: 0 .7rem;
     margin: 0 auto;
     display: flex;
     position: relative;
+    background-color: #04b3fa;
 }
 
 .logo-container {
@@ -38,24 +38,11 @@
     flex: 1;
 }
 
-.logo {
-    color: black;
-    font-weight: 1.1rem;
-    font-weight: 600;
-    letter-spacing: 2px;
-    text-transform: uppercase;
-    line-height: 3rem;
-}
-
-.logo span {
-    font-weight: 300;
-}
-
 .btn {
     display: inline-block;
     padding: .5rem 1.3rem;
-    font-size: .8rem;
-    border: 2px solid #FFF;
+    font-size: .9rem;
+    border: 2px solid #fff;
     border-radius: 2rem;
     line-height: 1;
     margin: 0 .2rem;
@@ -81,7 +68,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    line-height: 3rem;
+    line-height: 4rem;
 }
 
 .nav-link {
@@ -89,10 +76,10 @@
 }
 
 .nav-link>a {
-    color: black;
-    padding: 0 .8rem;
+    color: #FFF;
+    padding: 0 .2rem;
     letter-spacing: 1px;
-    font-size: .95rem;
+    font-size: 1.1rem;
     display: flex;
     align-items: center;
     justify-content: space-between;
@@ -121,18 +108,18 @@
     position: relative;
 }
 
-.dropdown-link a {
+.dropdown-link>a {
     display: flex;
-    background: #EEE;
-    color: black;
+    background-color: #04b3fa;
+    color: #FFF;
     padding: .1rem 1rem;
-    font-size: .9rem;
+    font-size: 1rem;
     align-items: center;
     transition: .3s;
 }
 
 .dropdown-link a:hover {
-    background: #db5252;
+    background: #FFF;
     color: black;
 }
 
@@ -146,7 +133,7 @@
     height: 11px;
     top: -5.5px;
     left: 32px;
-    background-color: #FFF;
+    background-color: #039dda;
     transform: rotate(45deg);
     cursor: pointer;
     transition: .3s;
@@ -154,7 +141,7 @@
 }
 
 .dropdown-link:first-child:hover~.arrow {
-    background-color: #db5252;
+    background: #FFF;
 }
 
 .nav-link:hover>.dropdown {
@@ -176,7 +163,6 @@
 .hamburger-menu {
     width: 2.5rem;
     height: 2.5rem;
-    background: black;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -187,7 +173,7 @@
     width: 1.6rem;
     height: 3px;
     border-radius: 3px;
-    background: white;
+    background: #FFF;
     position: relative;
     z-index: 1001;
     transition: .5s;
@@ -200,7 +186,7 @@
     position: absolute;
     width: inherit;
     height: inherit;
-    background-color: white;
+    background-color: #FFF;
     border-radius: 3px;
     transition: .5s;
 
@@ -244,7 +230,8 @@
         opacity: 0;
         transform: translateY(15px);
     }
-    to{
+
+    to {
         opacity: 1;
         transform: translateY(10px);
     }
@@ -261,8 +248,8 @@
 
     .nav-btn {
         position: fixed;
-        height: calc(90vh);
-        top: 3rem;
+        height: calc(91%);
+        top: 4rem;
         left: 0;
         width: 100%;
         background: #EEE;
@@ -278,15 +265,15 @@
     #check:checked~.nav-btn {
         transform: translateX(0);
     }
-    #check:checked~ .nav-btn .nav-link,
-    #check:checked~ .nav-btn  .log-sign{
+
+    #check:checked~.nav-btn .nav-link,
+    #check:checked~.nav-btn .log-sign {
         animation: animation .5s ease forwards var(--i);
     }
 
     .nav-links {
         flex: initial;
         width: 95%;
-        margin: auto;
     }
 
     .nav-links>ul {
@@ -303,11 +290,13 @@
     .nav-link>a {
         line-height: 1;
         padding: .7rem 2rem;
+        color: black;
     }
-
+    
     .nav-link:hover>a {
         transform: scale(1);
-        background-color: aqua;
+        background-color: #04b3fa;
+        color: #FFF;
     }
 
     .dropdown {
@@ -319,7 +308,7 @@
         pointer-events: auto;
         width: 100%;
         padding: 0;
-        background-color: green;
+        background-color: #0398d3;
         display: none;
     }
 
@@ -330,6 +319,8 @@
     .dropdown-link>a {
         background-color: transparent;
         color: #FFF;
+        padding: 0 3rem;
+        height: 2.2rem;
     }
 
     .dropdown-link:not(:nth-last-child(2)) {
@@ -338,7 +329,7 @@
 
     .arrow {
         z-index: 1;
-        background-color: green;
+        background-color: #04b3fa;
         left: 10%;
         transform: scale(1.1) rotate(45deg);
         transition: .5s;
@@ -358,7 +349,7 @@
     }
 
     .dropdown-link:hover>a {
-        background-color: green;
+        background-color: #04b3fa;
 
     }
 
