--- a/src/app/login/login.css
+++ b/src/app/login/login.css
@@ -60,6 +60,30 @@ form.sing-up-form {
     z-index: 1;
     opacity: 0;
 }
+.home-back{
+    width: 90%;
+    text-align: left;
+}
+.link-back{
+    width: 90%;
+    padding: .5rem 1rem;
+    font-size: 16px;
+    font-weight: 600;
+    border: 2px solid #f0f0f0;
+    border-radius: 2rem;
+    transition: .5s ease-in-out;
+    text-transform: uppercase;
+    background: #f0f0f0;
+    color: #000e;
+}
+.link-back i {
+    margin-right: 10px;
+}
+.link-back:hover{
+    color: #fff;
+    border: 2px solid #04b3fa;
+    background: #04b3fa; 
+}
 
 .title {
     font-size: 2.2rem;
@@ -71,9 +95,9 @@ form.sing-up-form {
 .input-field {
     max-width: 380px;
     width: 100%;
-    height: 55px;
+    height: 50px;
     background-color: #f0f0f0;
-    margin: 10px 0;
+    margin: 5px 0;
     border-radius: 55px;
     display: grid;
     grid-template-columns: 15% 85%;
@@ -102,6 +126,35 @@ form.sing-up-form {
     color: #aaa;
     font-weight: 500;
 }
+.file{
+    width: 68%;
+    background-color:#f0f0f0;
+    border-radius: 55px;
+    padding: 0;
+    margin: 5px 0;
+}
+
+.file input {
+    background-color:#f0f0f0;
+    border-radius: 55px;
+    width: 100%;
+    outline: none;
+    font-weight: 600;
+}
+
+::-webkit-file-upload-button {
+    color: white;
+    background: #04b3fa;
+    border: none;
+    padding: 15px;
+    border-radius: 5px 56px 4px 5px;
+    transition: .8s ease-in-out;
+}
+
+
+::-webkit-file-upload-button:hover {
+    background: #0379a8;
+}
 .btn-authentication {
     width: 150px;
     height: 49px;
@@ -124,31 +177,7 @@ form.sing-up-form {
 .social-text {
     padding: .7rem 0;
     font-size: 1rem;
-}
-
-.social-media {
-    display: flex;
-    justify-content: center;
-    gap: 10px;
-}
-
-.social-icon {
-    height: 40px;
-    width: 40px;
-    border: 1px solid #04b3fa;
-    max-width: 0 .45rem;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    color: #333;
-    font-size: 1.5rem;
-    border-radius: 50%;
-    transition: .3s ease-in-out;
-}
-
-.social-icon:hover {
-    background: #009cda;
-    color: white;
+    margin-bottom: 15px;
 }
 
 .panls-container {
@@ -350,6 +379,12 @@ form.sing-up-form {
         transform: translate(-50%, 0);
         left: 50%;
     }
+    .file{
+        width: 57%;
+    }
+    .social-text {
+        margin-bottom: 10px;
+    }
 }
 @media (max-width: 570px){
     form{
@@ -368,5 +403,8 @@ form.sing-up-form {
     .container-login.sign-up-mode :before{
         bottom: 28%;
         left: 50%;
+    }
+    .file{
+        width: 100%;
     }
 }
